--- a/Plants/Plants.csproj
+++ b/Plants/Plants.csproj
@@ -22,12 +22,16 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="app.css" />
-    <Content Include="index.html" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="app.ts" />
+    <TypeScriptCompile Include="interfaces\classification.ts" />
+    <TypeScriptCompile Include="interfaces\location.ts" />
+    <TypeScriptCompile Include="interfaces\media.ts" />
+    <TypeScriptCompile Include="interfaces\plant.ts" />
+    <TypeScriptCompile Include="interfaces\recording.ts" />
+    <TypeScriptCompile Include="interfaces\shape-measurement.ts" />
+    <TypeScriptCompile Include="interfaces\shape.ts" />
   </ItemGroup>
   <ItemGroup>
     <None Include="web.Debug.config">
